fix overflow

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ html, body {
     scroll-behavior: smooth;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 h1, h2 {
     font-size: 2.5rem;
 }
